Initial Revel template app

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+
+test-results/
+tmp/
+routes/
+
+
+
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
@@ -21,4 +28,8 @@ _testmain.go
 
 *.exe
 *.test
+
 *.prof
+
+
+
